Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52962

[Windows]: When connecting over remote desktop then widgets are not shown correctly

    XMLWordPrintable

Details

    • 8f85e82c5dc3d3028828e11ff59b16e3cae2844d

    Description

      [Windows]: When connecting over remote desktop then widgets are not shown correctly. They appear with a white background even though it should be a dark one and thus the text is shown as white on white. This occurs even if the remote desktop has the visual styles disabled. Reportedly a regression against Qt 5.4.1.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes